update .bin et correction d'une erreur dans le printer.cfg

--- a/Neptune 3 MAX/printer.cfg
+++ b/Neptune 3 MAX/printer.cfg
@@ -161,7 +161,7 @@ x_offset: -28
 y_offset: 20
 # Calibrate probe: https://www.klipper3d.org/Bed_Level.html
 # - Example: PROBE_CALIBRATE, then adjust with TESTZ Z=+/-X
-#z_offset: 1.75
+z_offset: 1.75
 
 [bed_mesh]
 probe_count: 10,10
